--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div class="container">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<p id="verification_subtext">We emailed you the six digit code to 
+			acciojob@email.com Enter the code below to confirm your email address.</p>
+		<div class="code-container">
+			<input type="text" maxlength="1" class="code" id="digit1" autofocus>
+			<input type="text" maxlength="1" class="code" id="digit2">
+			<input type="text" maxlength="1" class="code" id="digit3">
+			<input type="text" maxlength="1" class="code" id="digit4">
+			<input type="text" maxlength="1" class="code" id="digit5">
+			<input type="text" maxlength="1" class="code" id="digit6">
+		</div>
+		<p class="disclaimer">This is design only. We didn't actually 
+			send you an email as we don't have your email, right?</p>
+	</div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
