--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 		<p id="verification_subtext">We emailed you the six digit code to 
 			acciojob@email.com Enter the code below to confirm your email address.</p>
 		<div class="code-container">
-			<input type="text" maxlength="1" class="code" id="digit1" autofocus>
-			<input type="text" maxlength="1" class="code" id="digit2">
-			<input type="text" maxlength="1" class="code" id="digit3">
-			<input type="text" maxlength="1" class="code" id="digit4">
-			<input type="text" maxlength="1" class="code" id="digit5">
+			<input type="text" maxlength="1" class="code" id="code-1" autofocus>
+			<input type="text" maxlength="1" class="code" id="code-2">
+			<input type="text" maxlength="1" class="code" id="code-3">
+			<input type="text" maxlength="1" class="code" id="code-4">
+			<input type="text" maxlength="1" class="code" id="code-5">
 			<input type="text" maxlength="1" class="code" id="digit6">
 		</div>
 		<p class="disclaimer">This is design only. We didn't actually 
