--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 		<p id="verification_subtext">We emailed you the six digit code to 
 			acciojob@email.com Enter the code below to confirm your email address.</p>
 		<div class="code-container">
-			<input type="text" maxlength="1" class="code" id="code-1" focused>
-			<input type="text" maxlength="1" class="code" id="code-2">
-			<input type="text" maxlength="1" class="code" id="code-3">
-			<input type="text" maxlength="1" class="code" id="code-4">
-			<input type="text" maxlength="1" class="code" id="code-5">
-			<input type="text" maxlength="1" class="code" id="code-6">
+			<input type="text" maxlength="1" class="code" id="code-1" placeholder="0" autofocus>
+			<input type="text" maxlength="1" class="code" id="code-2" placeholder="0">
+			<input type="text" maxlength="1" class="code" id="code-3" placeholder="0">
+			<input type="text" maxlength="1" class="code" id="code-4" placeholder="0">
+			<input type="text" maxlength="1" class="code" id="code-5" placeholder="0">
+			<input type="text" maxlength="1" class="code" id="code-6" placeholder="0">
 		</div>
 		<p class="disclaimer">This is design only. We didn't actually 
 			send you an email as we don't have your email, right?</p>
